# nim23

./: .editorconfig  .env.sample  .gitignore  CONTRIBUTORS.txt  README.md  TODO.md  UTILS.md  docker-compose.yml
backend/: Dockerfile  config.py  dev_server.py  entrypoint.py  entrypoint.sh  passenger_wsgi.py  pyproject.toml  requirements.txt  requirements_server.txt  supervisord.conf
backend/bgutil-ytdlp-pot-provider/: README.md  package-lock.json  package.json
backend/bgutil-ytdlp-pot-provider/server/: package.json  tsconfig.json
backend/blogs/: admin.py  models.py
backend/blogs/api/: routers.py  serializers.py  views.py
backend/blogs/migrations/: 0001_initial.py  0002_alter_blog_order.py  0002_blog_content_in_markdown.py  0002_blog_overview.py  0003_alter_blog_content.py  0003_alter_blog_order.py  0003_rename_keywords_blog_tags.py  0004_alter_blog_tags.py  0004_blogsubcategory_blog_sub_category.py  0004_remove_blog_reading_time.py  0005_alter_blog_options.py  (+6 more)
backend/code_snippets/: admin.py  models.py
backend/config/: settings.py  urls.py  views.py
backend/detect_ai/: apps.py
backend/grabit/: admin.py  apps.py  models.py
backend/humanizer_ai/: apps.py
backend/others/: admin.py  models.py
backend/portfolios/: admin.py  models.py
backend/project/: api_router.py  asgi.py  consumers.py  routing.py  settings.py  urls.py
backend/recommendr/: admin.py  apps.py  models.py
backend/users/: admin.py  models.py
backend/utils/: backup.py  grabit_utils.py  helpers.py  mixins.py  snippets.py  test.py  tester.html  tester.json  throttles.py
(+608 files in other folders)
